<resources>
    <string name="app_name">Price</string>
    <string name="splash_img">splash_img</string>
    <string name="price_text">قیمت طلا و ارز</string>
    <string name="text2_splash">جدید ترین اخبار ارز و طلای جهان</string>
    <string name="todo">todo</string>
    <string name="price_gold">قیمت طلا</string>
    <string name="price_arz">قیمت ارز</string>
    <string name="text18">گرم طلای 18 عیار</string>
</resources>